Updated published papers plus other tweaks

--- a/cv.tex
+++ b/cv.tex
@@ -62,7 +62,7 @@
    I am currently a postdoctoral researcher at EPFL in the group of Prof.\ Nicola Marzari. I am researching methods for improving the performance of density functional theory (DFT). Taking inspiration from known properties of the exact functional and our knowledge of the systemic errors of DFT, I (and others) have shown how to construct inexpensive corrections to DFT that drastically improve its performance.
 
    \vspace{6pt}
-   I am now looking for further opportunities where I can apply my expertise in developing density functional approximations and my coding skills to create the next generation of state-of-the-art methods for computational quantum chemistry and materials science.
+   I am now looking for further opportunities where I can apply my expertise in developing density functional approximations and my coding skills to create the next generation of state-of-the-art computational methods for materials science and quantum chemistry.
    
    \vspace{6pt}
    Career highlights thus far include...
@@ -282,7 +282,7 @@
    \rowcolor{seaborn_bg_grey_half}
    \textbf{\textit{Teaching}}    &                                                                                                       &                                                                 &                                                                                                                                                                \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey_half}
-   2021-22
+   2021-23
                                  & \multicolumn{2}{m{0.59\textwidth}}{Lab demonstrator for master's course in atomistic and quantum simulation of materials}
                                  & EPFL                                                                                                                                                                                                                                                                                                                                    \\\noalign{\vskip-0.1pt}
    \noalign{\vskip-0.1pt} \rowcolor{seaborn_bg_grey_half}
@@ -303,7 +303,7 @@
                                  & University of Otago                                                                                                                                                                                                                                                                                                                     \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey}
    \multicolumn{4}{X}{\cellcolor{seaborn_bg_grey}\textbf{\textit{Supervision and mentoring}}}                                                                                                                                                                                                                                                                             \\\noalign{\vskip-0.1pt}
-   \multicolumn{4}{X}{\cellcolor{seaborn_bg_grey}During my postdoc I supervised Yannick Schubert, a master's student. He said that ``thanks to (Edward's) good choice of topics and guidance... achieving good results felt easy. Working with (Edward) was very motivating and a perfect start to a scientific career.'' One preprint has resulted from this work (with a second in preparation).}                                                                                                                                                                                                                       \\*\noalign{\vskip-0.1pt}
+   \multicolumn{4}{X}{\cellcolor{seaborn_bg_grey}During my postdoc I supervised Yannick Schubert, a master's student. He said that ``thanks to (Edward's) good choice of topics and guidance... achieving good results felt easy. Working with (Edward) was very motivating and a perfect start to a scientific career.'' One paper has resulted from this work (with a second in preparation).}                                                                                                                                                                                                                       \\*\noalign{\vskip-0.1pt}
    \multicolumn{4}{X}{\cellcolor{seaborn_bg_grey}I also helped Hovan Lee (PhD student from King's College London) with his DMFT calculations on transferrin. A paper resulted from this work, of which I am the last author.}                                                                                                                                        \\*\noalign{\vskip-0.1pt}
    \multicolumn{4}{X}{\cellcolor{seaborn_bg_grey}During the course of my PhD I provided support to two students. I spent a significant amount of time with M.\,A.\,Al-Badri (Masters, and then PhD student from King's College London), teaching him about DMFT and working with him on DMFT calculations on hemocyanin. I have hosted him in Cambridge twice, and visited him at KCL periodically. A paper resulted from this work. I was also the local port-of-call for S. Mansur (PhD student, Cambridge) for support running ONETEP calculations. This work resulted in two publications.}                                                                                                                                                            \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey_half}
@@ -387,12 +387,27 @@
    \rowcolor{seaborn_blue}
    \multicolumn{3}{l}{\textcolor{white}{\large \textbf{Referees}}}                                         \\\noalign{\vskip-0.1pt}
                     & \textbf{\textit{Prof. Mike Payne}} & \textbf{\textit{Prof. Nicola Marzari}}   \\\noalign{\vskip-0.1pt}
-   \textit{Address} & Room 528, Mott Building            & MED 2 1126                               \\\noalign{\vskip-0.1pt}
-                    & Cavendish Laboratory               & STI IMX THEOS                            \\\noalign{\vskip-0.1pt}
-                    & University of Cambridge            & École polytechnique fédérale de Lausanne \\\noalign{\vskip-0.1pt}
-                    & 19 J J Thomson Avenue              & Route Cantonale                          \\\noalign{\vskip-0.1pt}
-                    & Cambridge CB3 0HE                  & 1015 Lausanne                            \\\noalign{\vskip-0.1pt}
-                    & United Kingdom                     & Switzerland                              \\\noalign{\vskip-0.1pt}
+   \textit{Address} & 
+   
+   Theory of Condensed Matter
+   
+   University of Cambridge
+  
+   19 J J Thomson Avenue
+
+   Cambridge CB3 0HE
+
+   United Kingdom
+   &
+   Theory and Simulation of Materials
+
+   École polytechnique fédérale de Lausanne
+
+   Route Cantonale
+
+   1015 Lausanne
+
+   Switzerland                              \\\noalign{\vskip-0.1pt}
    \textit{Email}   & mcp1@cam.ac.uk                     & nicola.marzari@epfl.ch                   \\\noalign{\vskip-0.1pt}
    \textit{Phone}   & +44 (0)1223 337254                 & +41 (0)21 693 1129
 \end{tabularx}
@@ -407,20 +422,20 @@
    %}
    \textbf{EBL}, N.\,Colonna, R.\,De Gennaro, N.\,L.\,Nguyen, G.\,Borghi, A.\,Ferretti, I.\,Dabo, and N.\,Marzari, \href{https://arxiv.org/abs/2302.07759}{\textit{koopmans: an open-source package for accurately and efficiently predicting spectral properties with Koopmans functionals}}. arXiv:2302.07759 (2023)
    \\
-   Y.\,Schubert, N.\,Marzari, and \textbf{EBL}, \href{https://arxiv.org/abs/2212.05950}{\textit{Testing Koopmans spectral functionals on the analytically-solvable Hooke's atom}}. J. Chem. Phys. \emph{accepted} (2023)
+   Y.\,Schubert, N.\,Marzari, and \textbf{EBL}, \href{https://doi.org/10.1063/5.0138610}{\textit{Testing Koopmans spectral functionals on the analytically-solvable Hooke's atom}}. J. Chem. Phys. 158 (2023) 144113
    \\
-   A.\,Burgess, \textbf{EBL}, and D.\,D.\,O'Regan, \href{https://arxiv.org/abs/2210.17404}{\textit{A DFT+U type functional derived to explicitly address the flat plane condition}}. Phys. Rev. B. \emph{accepted} (2023)
+   A.\,Burgess, \textbf{EBL}, and D.\,D.\,O'Regan, \href{https://doi.org/10.1103/PhysRevB.107.L121115}{\textit{A DFT+U type functional derived to explicitly address the flat plane condition}}. Phys. Rev. B. 107 (2023) L121115
    \\
    G.\,C.\,Moore, M.\,K.\,Horton, A.\,M.\,Ganose, M.\,Siron, \textbf{EBL}, D.\,D.\,O'Regan, and K.\,A.\, Persson, \href{https://arxiv.org/abs/2201.04213}{\textit{High-throughput determination of Hubbard U and Hund J values for transition metal oxides via linear response formalism}}. arXiv:2201.04213 (2022) \\
-   N.\,Colonna, R.\,De Gennaro, \textbf{EBL}, and N.\,Marzari, \href{https://pubs.acs.org/doi/10.1021/acs.jctc.2c00161}{\textit{Koopmans spectral functionals in periodic-boundary conditions}}. J. Chem. Theory Comput. 18 (2022)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 \\ %&                                                 \\
-   R.\,De Gennaro, N.\,Colonna, \textbf{EBL}, and N.\,Marzari, \href{https://doi.org/10.1103/PhysRevB.106.035106}{\textit{Bloch's theorem in orbital-density-dependent functionals: Band structures from Koopmans spectral functionals}}. Phys. Rev. B 106 (2022)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      \\ % & 1 citation                                      \\
+   N.\,Colonna, R.\,De Gennaro, \textbf{EBL}, and N.\,Marzari, \href{https://pubs.acs.org/doi/10.1021/acs.jctc.2c00161}{\textit{Koopmans spectral functionals in periodic-boundary conditions}}. J. Chem. Theory Comput. 18 (2022) 5435                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                \\ %&                                                 \\
+   R.\,De Gennaro, N.\,Colonna, \textbf{EBL}, and N.\,Marzari, \href{https://doi.org/10.1103/PhysRevB.106.035106}{\textit{Bloch's theorem in orbital-density-dependent functionals: Band structures from Koopmans spectral functionals}}. Phys. Rev. B 106 (2022) 035106                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     \\ % & 1 citation                                      \\
    % 
-   H.\,Lee, C.\,Weber, and \textbf{EBL}, \href{https://doi.org/10.1021/acs.jpclett.2c00680}{\textit{Many-body study of Iron (III)-bound human serum transferrin}}. J. Phys. Chem. Lett. 13 (2022)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      \\ % &                                                 \\
+   H.\,Lee, C.\,Weber, and \textbf{EBL}, \href{https://doi.org/10.1021/acs.jpclett.2c00680}{\textit{Many-body study of Iron (III)-bound human serum transferrin}}. J. Phys. Chem. Lett. 13 (2022) 4419                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      \\ % &                                                 \\
    % 
    % 
-   R.\,Kobayashi, T\,P.\,M.\,Goumans, N.\,Ole Carstensen, T.\,M.\,Soini, N.\,Marzari, I.\,Timrov, S.\,Ponc\'e, \textbf{EBL}, C.\,J.\,Sewell, G.\,Pizzi, F.\,Ramirez, M.\,Bercx, S.\,P.\,. Huber, C.\,S.\,Adorf, and L.\,Talirz, \href{https://doi.org/10.1021/acs.jchemed.1c00655}{\textit{Virtual computational chemistry teaching laboratories – hands-on at a distance}} J. Chem. Educ. 98 (2021)                                                                                                                                                                                                                                                                                                                                                                   \\ %& 8 citations                                     \\
+   R.\,Kobayashi, T\,P.\,M.\,Goumans, N.\,Ole Carstensen, T.\,M.\,Soini, N.\,Marzari, I.\,Timrov, S.\,Ponc\'e, \textbf{EBL}, C.\,J.\,Sewell, G.\,Pizzi, F.\,Ramirez, M.\,Bercx, S.\,P.\,. Huber, C.\,S.\,Adorf, and L.\,Talirz, \href{https://doi.org/10.1021/acs.jchemed.1c00655}{\textit{Virtual computational chemistry teaching laboratories – hands-on at a distance}} J. Chem. Educ. 98 (2021) 3163                                                                                                                                                                                                                                                                                                                                                                  \\ %& 8 citations                                     \\
    % 
-   \textbf{EBL}, D.\,J.\,Cole, N.\,D.\,M.\,Hine, M.\,C.\,Payne, and C.\,Weber, \href{https://doi.org/10.1021/acs.jctc.0c00162}{\textit{ONETEP + TOSCAM: uniting dynamical mean field theory and linear-scaling density functional theory}} J. Chem. Theory Comput. 16 (2020)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           \\ %& 5 citations                                     \\
+   \textbf{EBL}, D.\,J.\,Cole, N.\,D.\,M.\,Hine, M.\,C.\,Payne, and C.\,Weber, \href{https://doi.org/10.1021/acs.jctc.0c00162}{\textit{ONETEP + TOSCAM: uniting dynamical mean field theory and linear-scaling density functional theory}} J. Chem. Theory Comput. 16 (2020) 4899                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          \\ %& 5 citations                                     \\
    S.\,M.\ Masur, \textbf{EBL}, and C.\,J.\ Edgcombe, \href{https://www.sciencedirect.com/science/article/pii/S036820481930221X}{\textit{Modelling a capped carbon nanotube by linear-scaling density-functional theory}}, J. Electron Spectrosc. Relat. Phenom. 241 (2020) 146896                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     \\ %& 3 citations                                     \\
    J.\,C.\,A.\ Prentice, J.\ Aarons, J.\,C.\ Womack, A.\,E.\,A.\ Allen, L.\ Andrinopoulos, L.\ Anton, R.\,A.\ Bell, A.\ Bhandari, G.\,A.\ Bramley, R.\,J.\ Charlton, R.\,J.\ Clements, D.\,J.\ Cole, G.\ Constantinescu, F.\ Corsetti, S.\,M-M.\ Dubois, K.\,K.\,B.\ Duff, J.\ María Escartín, A.\ Greco, Q.\ Hill, L.\,P.\ Lee, \textbf{EBL}, D.\,D.\ O’Regan, M.\,J.\,S.\ Phipps, L.\,E.\ Ratcliff, Á. Ruiz Serrano, E.\,W.\ Tait, G.\ Teobaldi, V.\ Vitale, N.\ Yeung, T.\,J.\ Zuehlsdorff, J.\ Dziedzic, P.\,D.\ Haynes, N.\,D.\,M.\ Hine, A.\,A.\ Mostofi, M.\,C.\ Payne, and C.-K.\ Skylaris, \href{https://aip.scitation.org/doi/full/10.1063/5.0004445}{\textit{The ONETEP linear-scaling density functional theory program}}. J. Chem. Phys. 52 (2020) 174111 \\ %& 73 citations                                    \\
    M.\,A.\,al-Badri, \textbf{EBL}, A.\,Georges, D.\,J.\,Cole, and C.\,Weber, \href{https://www.nature.com/articles/s42005-019-0270-1}{\textit{Superexchange mechanism and quantum many body excitations in the archetypal di-Cu oxo-bridge}}. Comm. Phys. 3 (2020) 4                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   \\ %& 7 citations                                     \\
